# Face-Attendance-System

./: .replit  pnpm-lock.yaml  pyproject.toml
.agents/memory/: MEMORY.md  admin-panel-port-timing.md  jwt-jose-sub-string.md  opencv-contrib.md
artifacts/admin-panel/: index.html
artifacts/admin-panel/.replit-artifact/: artifact.toml
artifacts/admin-panel/src/: App.tsx  index.css  main.tsx
artifacts/admin-panel/src/components/: layout.tsx
artifacts/admin-panel/src/pages/: attendance.tsx  camera.tsx  dashboard.tsx  employee-detail.tsx  employees.tsx  login.tsx  new-employee.tsx  reports.tsx
artifacts/api-server/: main.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: auth.py  config.py  database.py  face_service.py  helpers.py  models.py  schemas.py
artifacts/api-server/app/routes/: attendance.py  auth.py  employees.py  reports.py
artifacts/api-server/data/: attendance.db  face_labels.json  face_model.yml
lib/api-spec/: openapi.yaml
